--- a/localisation/v2_10.csv
+++ b/localisation/v2_10.csv
@@ -64,7 +64,7 @@ digambara_jain;天衣派;;;;;;;;;;x
 digambara_jain_desc;此人信奉耆那教的天衣派.;;;;;;;;;;x
 svetambara_jain;白衣派;;;;;;;;;;x
 svetambara_jain_desc;此人信奉耆那教的白衣派.;;;;;;;;;;x
-karluk;葛罗逯人;;;;;;;;;;x
+karluk;葛逻逯人;;;;;;;;;;x
 kirghiz;黠戛斯人;;;;;;;;;;x
 khanty;汉特人;;;;;;;;;;x
 afghan;阿富汗人;;;;;;;;;;x
@@ -289,10 +289,10 @@ EVTOPTA37012;逆贼!;;;;;;;;;;x
 nestorian_DESC;景教是早期基督教的分支，其中指出，基督有两个分离的本质 - 一个神，一个人。这与一性论者认为基督只有一个本质相反。景教教会名义上的领导者是东方的族长。;;;;;;;;;;x
 THE_DEMIURGE;造物主;;;;;;;;;;x
 paulician;保禄教会;;;;;;;;;;x
-paulician_DESC;保罗派是基督教诺斯替异端被摩尼教影响形成，起源于亚美尼亚。在游戏中，它被视为正统的异端。;;;;;;;;;;x
-d_paulician;保禄牧首属邦;;;;;;;;;;x
+paulician_DESC;保禄派是基督教诺斯替异端被摩尼教影响形成，起源于亚美尼亚。在游戏中，它被视为正统的异端。;;;;;;;;;;x
+d_paulician;保禄派牧首;;;;;;;;;;x
 d_paulician_adj;保禄牧首属邦;;;;;;;;;;x
-c_lori_adj;萝莉;;;;;;;;;;x
+c_lori_adj;洛利;;;;;;;;;;x
 messalian;祷告派;;;;;;;;;;x
 messalian_DESC;祈祷者，或尤奇特斯("祈祷的人")，是源于美索不达米亚的基督教异端，受到二元信仰祆教的影响。祈祷者们相信神可以通过肉体感官所感知，而这种感知必须达到完美。 每个人内心天生就存在魔鬼，只有通过强烈的祈祷才能驱逐. 他们还认为，路西法是上帝的长子并代表善的力量，且自从亚当和夏娃的孩子实践之后，乱伦是神圣的。他们没有正式的仪式，也没有严格的教会阶层。;;;;;;;;;;x
 THE_ASCETICUS;灵修书;;;;;;;;;;x
@@ -655,7 +655,7 @@ EVTOPTA_RoI_2002;好极了.;;;;;;;;;;x
 EVTDESC_RoI_2003;我的君主,\n\n很不幸, 我最近有点急事所以没法接受您的邀请去打老虎了.\n\n[From.GetFullName];;;;;;;;;;x
 EVTOPTA_RoI_2003;有点急事', 哼?;;;;;;;;;;x
 EVTDESC_RoI_2019;你已经到达了野营基地. 管家也已经打理好了一切, 士兵们在营帐周围守卫驱赶着可能混进来的野兽. 这将会很有趣!;;;;;;;;;;x
-EVTOPTA_RoI_2019;不等了！艹!;;;;;;;;;;x
+EVTOPTA_RoI_2019;我等不急了！;;;;;;;;;;x
 EVTDESC_RoI_2020;猎人和他们的随从已经集结在野营当中. 管家也已经打理好了一切, 士兵们在营帐周围守卫驱赶着可能混进来的野兽. 这将会很有趣!;;;;;;;;;;x
 EVTOPTA_RoI_2020;我等不了了!;;;;;;;;;;x
 EVTDESC_RoI_2501;一次无比成功的打猎! 一只老虎被猎杀后躺在人群的中央，所有人都很开心.;;;;;;;;;;x
@@ -734,7 +734,7 @@ EVTOPTC_RoI_204;又想了想,也许这并不适合我.;;;;;;;;;;x
 EVTDESC_RoI_206;一个印度的瑜伽士到达了你的宫廷，寻找听众. 他告诉你佛陀的行为方式以及如何通过调节你的需求和抛弃掉无节制的生活得到智慧.;;;;;;;;;;x
 EVTOPTC_RoI_206;我不需要你那虚假的哲学. 卫兵,把他赶走!!;;;;;;;;;;x
 EVTOPTA_RoI_207;你说服了我. 现在是佛陀时间...;;;;;;;;;;x
-EVTOPTB_RoI_207;你狠睿智. 我会转信佛教.;;;;;;;;;;x
+EVTOPTB_RoI_207;你很睿智. 我会转信佛教.;;;;;;;;;;x
 EVTOPTC_RoI_207;又想了想,也许这并不适合我.;;;;;;;;;;x
 EVTDESC_RoI_209;一个裸体的耆那教信徒到达了你的宫廷,寻找听众. 在你的王座前坐下,他怒斥了你的生活方式,说你罪孽深重,并且告诉你如何通过耆那教的教义获得协调与纯洁.;;;;;;;;;;x
 EVTOPTB_RoI_209;先穿上衣服!;;;;;;;;;;x
