--- a/localisation/v2_10c.csv
+++ b/localisation/v2_10c.csv
@@ -43,7 +43,7 @@ EVTOPTA60401;犍陀罗最合适！;;;;;;;;;;x
 EVTOPTB60401;木尔坦很原始;;;;;;;;;;x
 EVTOPTC60401;罗婆补罗附属而弱小;;;;;;;;;;x
 EVTOPTD60401;巴卡尔是第一个!;;;;;;;;;;x
-EVTNAME60406;伽昔尼的崛起;;;;;;;;;;x
+EVTNAME60406;伽色尼的崛起;;;;;;;;;;x
 EVTDESC60406;一个前土耳其奴兵,雇佣兵,在阿富汗人的土地上崛起.苏布克特勤,是一个积极反对异教徒的人,致力于建立一个堪比古时哈里发的帝国. 他刚刚毁掉了 [FromFrom.GetTitledName] 在一次残忍的战争中,数以万计的凶悍部落青年因此聚集到了他的军旗之下！;;;;;;;;;;x
 EVTOPTA60406;颤抖吧,异端!;;;;;;;;;;x
 EVTOPTB60406;多么麻烦的一个地区...;;;;;;;;;;x
