--- a/localisation/v2_20c.csv
+++ b/localisation/v2_20c.csv
@@ -36,13 +36,13 @@ EVTDESC_CM_1409;我的[Root.GetLordLady]，尽管您曾经无私援助，帮助[
 EVTOPTA_CM_1409;这群背信弃义的[From.Culture.GetName]!;;;;;;;;;;x
 EVTOPTB_CM_1409;叛徒!;;;;;;;;;;x
 CALL_ALL_ALLIES;召唤所有盟友加入战争;;;;;;;;;;x
-CALL_ALL_NO_WAR;你没有处于战争状态, 因此你不能召唤附庸及盟友加入战争;;;;;;;;;;x
+CALL_ALL_NO_WAR;你没有处于战争状态, 因此你不能召唤封臣及盟友加入战争;;;;;;;;;;x
 CALL_ALL_ALLIES_INFO;§G按住§YCtrl键l§G以召唤全部盟友加入战争§!;;;;;;;;;;x
 CharlemagneDLC;查理曼;;;;;;;;;;x
 EarlyWesternClothingDLC;早期西方服饰包;;;;;;;;;;x
 EarlyEasternClothingDLC;早期东方服饰包;;;;;;;;;;x
 DynastyShieldsCharlemagneDLC;查理曼王朝盾徽;;;;;;;;;;x
-EVTDESC107000;注意! 在公元1066年的世界正如你所看到的,被分为许多不同的地域-国家 - 每一个国家都由其君主或是其他的统治者控制着. 王国风云2这个游戏表现了关于这些统治者的个人,家族,关系,阴谋以及权力.是成为一名征服者还是一个温和的家族长者,都取决于玩家你的抉择,但是你要记住不论你如何想,其他的角色都会渴求更多的土地与财富.\n\n王国风云2是一个实时战略游戏.关闭这个窗口并通过调节游戏速度开始游戏...;;;;;;;;;;x
+EVTDESC107000;注意! 在公元1066年的世界正如你所看到的,被分为许多不同的地域-国家 - 每一个国家都由其君主或是其他的统治者控制着. 王国风云II这个游戏表现了关于这些统治者的个人,家族,关系,阴谋以及权力.是成为一名征服者还是一个温和的家族长者,都取决于玩家你的抉择,但是你要记住不论你如何想,其他的角色都会渴求更多的土地与财富.\n\n王国风云II是一个实时战略游戏.关闭这个窗口并通过调节游戏速度开始游戏...;;;;;;;;;;x
 EVTDESC107304;为了将您的部队装载上船，请将您的舰队驶入一个陆地省份以令其入港.然后您可以将您的部队开入同一省份,通过点击军队上船键使得部队与舰队合并. 你也可以让你在临海省份的军队直接移动到在邻近该省份洋面上的舰队上的形式使得部队登船. 请注意,舰队越大能装载的部队越多.;;;;;;;;;;x
 EVTDESC107306;当您的部队停留在敌人控制的领地时候, 他们将会围攻敌人的产业.您需要占领该省份内所有的产业以完全占据该地区. 围城战需要消耗时间,同时围城部队人数必须多于守军. 围攻部队越多,攻陷的时间越快. 当地堡垒的等级也会影响到围城时间的长短.如果你想了解围城的进度, 请选择你的部队或者点击正在围攻的省份.;;;;;;;;;;x
 CHRONICLE_GRAND_TOURNAMENT;[From.GetTitledFirstName] 举办了一场盛大的比武, 邀请了国内所有的大领主和骑士前往参加.;;;;;;;;;;x
@@ -72,7 +72,7 @@ feudal_administration_option;封建;;;;;;;;;;x
 feudal_administration_desc;封建社会是一个封建领主为主要构成的等级社会,其中的每一个成员都对直接领导的上级领主许以效忠并对指挥着直接下级领主.这是中世纪时期最普遍的社会形态 ,在这种社会形态中领主的统治很大程度上是建立在[Player.GetHerHis]众多封臣的忠诚之上.;;;;;;;;;;x
 imperial_administration;帝国体制;;;;;;;;;;x
 imperial_administration_option;帝国;;;;;;;;;;x
-imperial_administration_desc;这种政治体制类似于罗马帝国时期的体制, 是由不同等级的官吏体系以皇帝的名义对国家日常事务进行处理.这种体制通过削弱地方附庸的权力来使得政权稳固.;;;;;;;;;;x
+imperial_administration_desc;这种政治体制类似于罗马帝国时期的体制, 是由不同等级的官吏体系以皇帝的名义对国家日常事务进行处理.这种体制通过削弱地方封臣的权力来使得政权稳固.;;;;;;;;;;x
 vice_royalty_duke_byzantine;将军;;;;;;;;;;x
 vice_royalty_king_byzantine;总督;;;;;;;;;;x
 vice_royalty_emperor_byzantine;大都督;;;;;;;;;;x
