--- a/localisation/v2_30.csv
+++ b/localisation/v2_30.csv
@@ -1,7 +1,7 @@
 ﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 ACQUISITION_CLAIM;作为宣称者而征服;;;;;;;;;;x
 ACQUISITION_HOST;作为冒险者而征服;;;;;;;;;;x
-ACQUISITION_REVOLT;作为起义领袖而征服;;;;;;;;;;x
+ACQUISITION_REVOLT;作为叛乱领袖而征服;;;;;;;;;;x
 ACQUISITION_USURP;和平地篡夺;;;;;;;;;;x
 ACQUISITION_FACTION_DEMAND;被派系所拥立;;;;;;;;;;x
 PERSONAL_OPINION_LOWER_THAN;个人好感低于;;;;;;;;;;x
