--- a/localisation/v2_40.csv
+++ b/localisation/v2_40.csv
@@ -248,14 +248,14 @@ PROV1347;塔克拉玛干沙漠;;;;;;;;;;x
 pyramid;金字塔;;;;;;;;;;x
 k_mongolia;蒙古;;;;;;;;;;x
 k_mongolia_adj;Mongolian;;;;;;;;;;x
-d_altay;阿勒泰;;;;;;;;;;x
+d_altay;阿尔泰;;;;;;;;;;x
 d_otuken;于都斤;;;;;;;;;;x
 d_khangai;杭爱;;;;;;;;;;x
-d_ikh_bogd;伊赫博格;;;;;;;;;;x
+d_ikh_bogd;也客孛黑多;;;;;;;;;;x
 k_khotan;于阗;;;;;;;;;;x
 d_kashgar;喀什噶尔;;;;;;;;;;x
 d_khotan;于阗;;;;;;;;;;x
-d_karashar;焉耆;;;;;;;;;;x
+d_karashar;喀喇沙尔;;;;;;;;;;x
 d_kumul;哈密;;;;;;;;;;x
 EVTOPTA_WOL_415;有蝴蝶在我的肚子上!;;;;;;;;;;x
 EVTTOOLTIP_CM_4332;[This.GetTitledFirstName]成为了哈鲁里耶教团的一名成员。;;;;;;;;;;x
@@ -451,7 +451,7 @@ tr_silk_road_2;丝路集市;;;;;;;;;;x
 tr_silk_road_2_desc;这个丝绸之路贸易站已经发展成为一个大城镇，能够提供更多应对土匪强盗的保护，因此吸引了更多愿意留在这里贸易的商人。;;;;;;;;;;x
 tr_silk_road_3;丝路主城;;;;;;;;;;x
 tr_silk_road_3_desc;这是丝绸之路上主要的贸易中心，在这里，来自四面八方的商人们交易着他们的货物。一切你能喊得出名字的商品和服务都可以在这里找到，形形色色的语言回荡在大街小巷间。;;;;;;;;;;x
-EVTDESC_HL_210;另一个部族在[From.GetName]起义了，他们加入了当前的叛乱！;;;;;;;;;;x
+EVTDESC_HL_210;另一个部族在[From.GetName]反叛了，他们加入了当前的叛乱！;;;;;;;;;;x
 TRIBUTARY;附属;;;;;;;;;;x
 UNUSED_MANPOWER;未使用人力;;;;;;;;;;x
 RAISED_MANPOWER;人力增加;;;;;;;;;;x
@@ -588,8 +588,8 @@ b_gorgol;戈尔戈勒;;;;;;;;;;x
 b_khangai;杭爱;;;;;;;;;;x
 b_kara_khorum;哈剌和林;;;;;;;;;;x
 b_baygal;贝加尔;;;;;;;;;;x
-b_aj_bogd;阿朱博格;;;;;;;;;;x
-b_ikh_bogd;伊赫博格;;;;;;;;;;x
+b_aj_bogd;阿朱孛黑多;;;;;;;;;;x
+b_ikh_bogd;也客孛黑多;;;;;;;;;;x
 b_tsagaannuur;查干诺尔;;;;;;;;;;x
 b_yarkand;叶尔羌;;;;;;;;;;x
 b_kashgar;喀什噶尔;;;;;;;;;;x
@@ -601,9 +601,9 @@ b_niya;尼雅;;;;;;;;;;x
 b_cherchen;车尔臣;;;;;;;;;;x
 b_charkliq;卡克里克;;;;;;;;;;x
 b_miran;米兰;;;;;;;;;;x
-b_karashar;焉耆;;;;;;;;;;x
-b_kucha;龟兹;;;;;;;;;;x
-b_kara_khoja;高昌;;;;;;;;;;x
+b_karashar;喀喇沙尔;;;;;;;;;;x
+b_kucha;屈茨;;;;;;;;;;x
+b_kara_khoja;合剌火者;;;;;;;;;;x
 b_luntai;轮台;;;;;;;;;;x
 b_dunhuang;敦煌;;;;;;;;;;x
 b_anxi;安西;;;;;;;;;;x
@@ -618,19 +618,19 @@ PROV1439;喀什噶尔;;;;;;;;;;x
 PROV1440;于阗;;;;;;;;;;x
 PROV1441;车尔臣;;;;;;;;;;x
 PROV1442;卡克里克;;;;;;;;;;x
-PROV1443;焉耆;;;;;;;;;;x
-PROV1444;龟兹;;;;;;;;;;x
+PROV1443;喀喇沙尔;;;;;;;;;;x
+PROV1444;屈茨;;;;;;;;;;x
 PROV1445;阿克苏;;;;;;;;;;x
-PROV1446;高昌;;;;;;;;;;x
+PROV1446;合剌火者;;;;;;;;;;x
 PROV1447;楼兰;;;;;;;;;;x
 PROV1448;敦煌;;;;;;;;;;x
 PROV1449;轮台;;;;;;;;;;x
 PROV1450;哈密;;;;;;;;;;x
 PROV1451;阿尔泰;;;;;;;;;;x
-PROV1453;阿朱博格;;;;;;;;;;x
+PROV1453;阿朱孛黑多;;;;;;;;;;x
 PROV1454;慕兹陶;;;;;;;;;;x
 PROV1455;查干诺尔;;;;;;;;;;x
-PROV1456;伊赫博格;;;;;;;;;;x
+PROV1456;也客孛黑多;;;;;;;;;;x
 PROV1457;哈剌和林;;;;;;;;;;x
 PROV1458;杭爱;;;;;;;;;;x
 PROV1459;克孜勒;;;;;;;;;;x
