--- a/localisation/v2_50_notranslate.csv
+++ b/localisation/v2_50_notranslate.csv
@@ -23,7 +23,7 @@ ze_administration_laws_0_option;封建的;;;;;;;;;;x
 ze_administration_laws_0_desc;封建社会是一种拥有大量土地的领主的等级制社会；在这种社会中，每个人都需要对直接上级领主效忠并可以命令他们的直接下级。大多数中世纪国家都采取这样的方式运作，这意义着统治者非常依赖强大封臣 [Player.GetHerHis] 的忠诚。;;;;;;;;;;x
 ze_administration_laws_2;帝国体制;;;;;;;;;;x
 ze_administration_laws_2_option;帝国;;;;;;;;;;x
-ze_administration_laws_2_desc;这种政治体制类似于罗马帝国时期的体制，是由不同等级的官吏体系以皇帝的名义对国家日常事物进行处理，这种体制通过削弱地方附庸的圈里来使得政权稳固。;;;;;;;;;;x
+ze_administration_laws_2_desc;这种政治体制类似于罗马帝国时期的体制，是由不同等级的官吏体系以皇帝的名义对国家日常事物进行处理，这种体制通过削弱地方封臣的权力来使得政权稳固。;;;;;;;;;;x
 SUPPLY_LIMIT_TOOLTIP;补给限制：$VALUE|Y$;;;;;;;;;;x
 MAKE_GREY;$TEXT|g$;;;;;;;;;;x
 Zeus;御前会议;;;;;;;;;;x
