--- a/localisation/LegacyOfRome.csv
+++ b/localisation/LegacyOfRome.csv
@@ -22,8 +22,8 @@ opinion_blinded_family;致盲亲属;;;;;;;;;;x
 opinion_loyal_servant;忠实的仆人;;;;;;;;;;x
 nick_the_glorious;荣耀的;;;;;;;;;;x
 nick_the_saint;圣徒;;;;;;;;;;x
-EVTNAMELoR.1;叙利亚巴勒斯坦行省;;;;;;;;;;x
-EVTDESCLoR.1;我们已经从野蛮人手中解放了古老的叙利亚巴勒斯坦行省让它重归罗马帝国。一次盛大的凯旋仪式将为完成此次壮举的英雄们举行，他们的姓名与他们的功绩将会永远被罗马铭记！;;;;;;;;;;x
+EVTNAMELoR.1;叙利亚培勒舍蒂那行省;;;;;;;;;;x
+EVTDESCLoR.1;我们已经从野蛮人手中解放了古老的叙利亚培勒舍蒂那行省让它重归罗马帝国。一次盛大的凯旋仪式将为完成此次壮举的英雄们举行，他们的姓名与他们的功绩将会永远被罗马铭记！;;;;;;;;;;x
 EVTOPTALoR.1;帝国万岁！;;;;;;;;;;x
 EVTNAMELoR.2;埃古普托斯行省;;;;;;;;;;x
 EVTDESCLoR.2;埃古普托斯人民的黑暗时代已经过去，再次回归了罗马的统治. 法老的土地是旧帝国的大好粮仓，并且它将在永世昌盛的罗马重新成为至关重要的基石..;;;;;;;;;;x
@@ -33,9 +33,9 @@ EVTNAMELoR.4;阿非利加行省;;;;;;;;;;x
 EVTDESCLoR.4;[Root.GetTitledFirstName]的势力现已遍布前罗马的阿非利加行省，再次将其纳入帝国囊中.帝国军队正在行军通过古老的罗马宿敌迦太基城，历史必将重现..;;;;;;;;;;x
 EVTNAMELoR.5;伊利里库姆行省;;;;;;;;;;x
 EVTDESCLoR.5;曾经罗马行省伊利里库姆已经重归了它真正的主人手里，复兴的罗马帝国以亚得里亚海东海岸作为天然的屏障，未来这个重要的兵源地将会在夺回西方疆域的战争中展现它的价值...;;;;;;;;;;x
-EVTNAMELoR.6;意大利行省;;;;;;;;;;x
+EVTNAMELoR.6;意大利亚行省;;;;;;;;;;x
 EVTDESCLoR.6;在西罗马帝国的陷落后，意大利第二次解放重归罗马帝国的统治--希望这次运势更佳. 伟大之都罗马已经在你的手中.当帝国旗帜在图拉真柱上在微风之中飘扬，甚至坚强的战士们都开始哭泣.;;;;;;;;;;x
-EVTNAMELoR.7;高卢行省;;;;;;;;;;x
+EVTNAMELoR.7;高卢利亚行省;;;;;;;;;;x
 EVTDESCLoR.7;很长一段时间内罗马认为永远失去的省份，高卢	已经臣服于[Root.GetTitle]并回归帝国的统治. 自千年以前凯撒发动战争，这片土地已经变化很多， 但将永不再遭受暴发户国王和伪帝的统治.;;;;;;;;;;x
 EVTNAMELoR.8;日耳曼尼亚行省;;;;;;;;;;x
 EVTDESCLoR.8;帝国的边界扩张超过了图拉真大帝曾有的疆域.日耳曼尼亚这一昔日帝国灭亡的罪魁祸首，现已获得了和平重归帝国的统治. 它将由真正的罗马帝国治理，而不是冒牌的帝国.;;;;;;;;;;x
@@ -55,7 +55,7 @@ restore_roman_empire;重建罗马帝国;;;;;;;;;;x
 restore_roman_empire_desc;如果能够恢复旧帝国的罗马城和其他主要领地，拜占庭帝国将在西方世界的眼中被认可为真正的和合法的罗马的继承者..;;;;;;;;;;x
 EVTTOOLTIPLoR.20;罗马帝国重建了.;;;;;;;;;;x
 EVTNAMELoR.20;新时代的曙光;;;;;;;;;;x
-EVTDESCLoR.20;朋友们，同胞们，罗马公民们，请倾听我的演讲！ 我们奇迹般地恢复许多世纪前失去的领土，并在收复的疆土上重建了罗马帝国！ 在失去了罗马的岁月里，欧罗巴的边疆遭遇了野蛮人的猛攻，一个又一个的省份被他们烧为白地，那是最黑暗的时代，但是终结黑暗时代的新时代曙光已经到来！\n\n从现在开始，罗马不会再被那个西方冒牌货嫉妒的称作“希腊人的帝国”了 ，而是被全欧罗巴公认为罗马帝国的后继者！ [Root.GetTitledFirstName] 统治整个重建的罗马帝国， 然而还有事情要做，我们要夺回先祖的领土，恢复古代罗马庞大的疆域，为了元老院和罗马人民！;;;;;;;;;;x
+EVTDESCLoR.20;朋友们，同胞们，罗马公民们，欢呼吧！ 在奇迹般收复了诸多失去长达数个世纪的领土后，罗马帝国重生了！自帝国边疆遭到野蛮人的袭击以来，一个又一个的省份被焚为焦土，欧罗巴经历了最为黑暗的时代，但现在对整个文明世界来说一个光明的新时代已经到来了！\n\n从现在开始，罗马国不再是那个西方嫉妒的冒牌货口中的“希腊人的帝国”了 ，她将是被公认的罗马帝国的后继者！ [Root.GetTitledFirstName] 统治着整个重建的罗马帝国， 但仍有许多工作需要完成。还有许多领土等着我们去夺回，诸多疆域等着我们去收复。为了元老院和罗马人民！;;;;;;;;;;x
 EVTOPTALoR.20;让其成为永恒！;;;;;;;;;;x
 EVTNAMELoR.21;罗马的第二个时代;;;;;;;;;;x
 EVTDESCLoR.21;之前在西方被很多人称作"希腊人帝国"的拜占庭帝国 ，已经设法光复足够多的失地来宣称罗马帝国重建了！ 拜占庭是真正的罗马和其光辉遗产的继承人，已不容否认. 他们声称一个新的时代已经来临.;;;;;;;;;;x
@@ -70,16 +70,16 @@ EVTDESCLoR.31;一场盛大的凯旋式将在竞技场举行，庆祝打败了帝
 EVTOPTALoR.31;帝国即将成功.;;;;;;;;;;x
 EVTDESCLoR.32;[Root.Liege.GetTitle]已经下令庆祝帝国最近的胜利，在竞技场为勇敢的士兵们举行凯旋式.当号手引领着阅兵式队列行进，马车上装满了战利品笼子里关押着最近战斗获得的战俘，人群中发出了欢呼.;;;;;;;;;;x
 EVTOPTALoR.32;一场令人印象深刻的表演.;;;;;;;;;;x
-opinion_triumph_held;举行凯旋式;;;;;;;;;;x
+opinion_triumph_held;举行凯旋打典;;;;;;;;;;x
 triumph_held;你的封臣都被帝国的力量所感动.;;;;;;;;;;x
 EVTNAMELoR.40;帝国的边界恢复了;;;;;;;;;;x
 EVTDESCLoR.40;罗马帝国光复史诗将传颂千秋万代. 当野蛮人肆意洗劫或者从沙漠而来的阿拉伯侵略者蹂躏着罗马帝国，那些不幸经历了黑暗日子的人们想都不敢想会有这么一天. 所有旧日的省份已经光复，并且帝国的疆域比近一千年来扩张得更远.\n\n教堂的钟响了，整个欧罗巴都在庆祝这个重大的时刻.在罗马和君士坦丁堡男人们和女人们满怀着喜悦的泪水. 保持一个如此规模的帝国将会是一场挑战，但是为了全人类你必须成功，唯恐世界陷入另一个丧失了罗马指明灯的无知和残暴的黑暗时代.;;;;;;;;;;x
 EVTOPTALoR.40;帝国永不陨落.;;;;;;;;;;x
-EVTDESCLoR.200;随着城市重回东罗马帝国的控制，是时候重建安条克教区作为正教会五大牧首区之一了.它最初是被使徒圣彼得所建立，被称为天主教首任教宗.;;;;;;;;;;x
+EVTDESCLoR.200;随着城市重归东罗马的控制之下，安条克教区作为东方正教会五大牧首区之一已被正式重设了。该教区源起于使徒圣彼得，他被认为是西方公教会的首任教宗。;;;;;;;;;;x
 EVTOPTALoR.200;赞美上帝！;;;;;;;;;;x
-EVTDESCLoR.201;随着城市重回东罗马帝国的控制，是时候重建耶路撒冷教区作为正教会五大牧首区之一了. 它最初是被公义者雅各所建立，在耶稣死后很快被推举为耶路撒冷教会领袖.;;;;;;;;;;x
-EVTDESCLoR.202;随着城市重回东罗马帝国的控制，是时候重建亚历山大教区作为正教会五大牧首区之一了. 它最初是被新约福音书的作者圣马可所建立，亚历山大的首任牧首.;;;;;;;;;;x
-EVTDESCLoR.203;随着城市重回东罗马帝国的控制，是时候重建罗马教区作为正教会五大牧首区之一了. 如果所有五个具有历史性的教区重回五大牧首区，东西方教会大分裂可能将会被修复.;;;;;;;;;;x
+EVTDESCLoR.201;随着城市重归东罗马的控制之下，耶路撒冷教区作为东方正教会五大牧首区之一已被正式重设了。该教区源起于公义者雅各，他在耶稣死后不久就被推举为耶路撒冷教会之首。;;;;;;;;;;x
+EVTDESCLoR.202;随着城市重归东罗马的控制之下，亚历山大教区作为东方正教会五大牧首区之一已被正式重设了。 该教区源起于传道者圣马可，他后来成为了亚历山大的首任牧首。;;;;;;;;;;x
+EVTDESCLoR.203;随着城市重归东罗马的控制之下，罗马教区作为东方正教会五大牧首区之一已被正式重设了。 如果具有重要历史意义的五大牧首区能够尽数重设，东西方教会之间的大分裂或将最终能被修复。;;;;;;;;;;x
 mend_great_schism;修补东西方教会大分裂;;;;;;;;;;x
 mend_great_schism_desc;教会大分裂见证了基督教分裂成了两个分支，但是如果所有五大牧首区能够由罗马帝国的统治和正教会的信仰所重建，基督教世界可能将重新联合.;;;;;;;;;;x
 EVTTOOLTIPLoR.210;教会大分裂被修补并且基督教世界重新联合.;;;;;;;;;;x
