--- a/localisation/text3.csv
+++ b/localisation/text3.csv
@@ -107,7 +107,7 @@ occupied_different_culture;新近征服（不同文化）;;;;;;;;;;x
 occupied_different_culturegroup;新近征服（不同文化组）;;;;;;;;;;x
 UNITVIEW_RAISABLE_DESC;已动员 / 未动员 / 总数;;;;;;;;;;x
 tut_menu_9;介绍;;;;;;;;;;x
-tut_menu_9_description;本教程将向您介绍王国风云2最基础的部分。;;;;;;;;;;x
+tut_menu_9_description;本教程将向您介绍王国风云II最基础的部分。;;;;;;;;;;x
 tut_menu_0;封建制度;;;;;;;;;;x
 tut_menu_0_description;了解封建头衔的等次秩序;;;;;;;;;;x
 tut_1b_2;在右上方，你可以看到你能直辖的领地上限。如果你超过了该上限，你会遭到税收惩罚效果，封臣也会变得不喜欢你。;;;;;;;;;;x
@@ -123,7 +123,7 @@ REORG_DESC;改编部队;;;;;;;;;;x
 REORG_CANCEL_DESC;关闭改编窗口;;;;;;;;;;x
 DEFENDER_LEVY;守城的征召军;;;;;;;;;;x
 DEFENDER_GARRISON;守城的卫戍部队;;;;;;;;;;x
-HINT_SPLASH_MAP;王国风云2拥有全3D的大地图。你可以用鼠标滚轮拉近或拉远镜头，按住鼠标滚轮移动鼠标调整视角。使用退格键backspace可以恢复默认视角。;;;;;;;;;;x
+HINT_SPLASH_MAP;王国风云II拥有全3D的大地图。你可以用鼠标滚轮拉近或拉远镜头，按住鼠标滚轮移动鼠标调整视角。使用退格键backspace可以恢复默认视角。;;;;;;;;;;x
 INTERACTION_REQUIRES_HAS_BETROTHAL;须已订婚;;;;;;;;;;x
 APPOINT_A_NEW;任命一名新§Y$JOB$§!;;;;;;;;;;x
 INTERACTION_REQUIRES_NOT_BASTARDS;双方均不能是私生子;;;;;;;;;;x
