--- a/localisation/text5.csv
+++ b/localisation/text5.csv
@@ -11,7 +11,7 @@ ACCEPT;接受;;;;;;;;;;x
 DECLINE;拒绝;;;;;;;;;;x
 HAS_LESS_RAISED_TROOP_DAYS;军队动员少于 §Y$DAYS$§! 天\n;;;;;;;;;;x
 HAS_MORE_RAISED_TROOP_DAYS;军队动员至少 §Y$DAYS$§! 天\n;;;;;;;;;;x
-SET_RAISED_TROOP_OPINION;§Y$ACTIVE$的§! 延长了附庸好感期限相比于 §Y$PASSIVE$§! 设为 §Y$MUCH$§!.\n;;;;;;;;;;x
+SET_RAISED_TROOP_OPINION;§Y$ACTIVE$的§! 延长了封臣好感期限相比于 §Y$PASSIVE$§! 设为 §Y$MUCH$§!.\n;;;;;;;;;;x
 CONTESTED_TITLE;争夺的头衔: $TITLE$;;;;;;;;;;x
 THREAT_REASON_HATRED;低好感;;;;;;;;;;x
 THREAT_REASON_LOVE;高好感;;;;;;;;;;x
