--- a/localisation/v1_07b.csv
+++ b/localisation/v1_07b.csv
@@ -6,13 +6,13 @@ opinion_spared_after_revolt;宽恕叛乱;;;;;;;;;;x
 opinion_divine_blood_marriage;天主所配，圣婚所合;;;;;;;;;;x
 opinion_non_divine_marriage;亵渎婚姻;;;;;;;;;;x
 action_uncover_plots;密谋;;;;;;;;;;x
-miaphysite;科普特正教会;;;;;;;;;;x
+miaphysite;基督合性派;;;;;;;;;;x
 monothelite;基督一志派;;;;;;;;;;x
-d_miaphysite;科普特派宗主教;;;;;;;;;;x
+d_miaphysite;基督合性派宗主教;;;;;;;;;;x
 d_miaphysite_adj;科普特派宗主教;;;;;;;;;;x
 COPTIC_POPE;科普特派宗主教;;;;;;;;;;x
 INTERACTION_CANNOT_REVOKE_LAST_TEMPLE_OFF_REL_HEAD;不能从你的宗教领袖剥夺唯一宗教领地。;;;;;;;;;;x
-d_monophysite;基督一性派教宗;;;;;;;;;;x
+d_monophysite;基督一性派宗主教;;;;;;;;;;x
 d_monophysite_adj;基督一性派教宗;;;;;;;;;;x
 MONOPHYSITE_POPE;基督一性派教宗;;;;;;;;;;x
 d_nestorian;东正大牧首;;;;;;;;;;x
