--- a/localisation/v2_20.csv
+++ b/localisation/v2_20.csv
@@ -27,7 +27,7 @@ LOMBARD_KINGDOM;伦巴第;;;;;;;;;;x
 LOMBARD_KINGDOM_ADJ;伦巴第;;;;;;;;;;x
 k_lombardy;伦巴第;;;;;;;;;;x
 k_lombardy_adj;伦巴第;;;;;;;;;;x
-WELCOME_HEADER;欢迎来到王国风云2的世界;;;;;;;;;;x
+WELCOME_HEADER;欢迎来到王国风云II的世界;;;;;;;;;;x
 WELCOME_FIRST_PLAY_RECOMMEND;\n\n强烈建议新玩家通过 §Y莱昂王国的阿方索§!教学战役. 结束后您可以普通模式继续战役.;;;;;;;;;;x
 WELCOME_PLAY_LEARNING_SCENARIO;教学战役;;;;;;;;;;x
 DONT_SHOW_AGAIN;不要再问我这个啦！;;;;;;;;;;x
@@ -39,10 +39,10 @@ EVTNAME107002;教学战役;;;;;;;;;;x
 EVTDESC107002;游戏中的主要资源是你的财富、威望以及虔诚. 财富自然是小钱钱,主要通过税收获取. 威望衡量您作为君主的成就和名望,而虔诚代表了宗教阶级对您的态度. 所有扮演过角色的威望与虔诚会计算入总分, 用于衡量游戏结束时您的分数等级.;;;;;;;;;;x
 EVTOPTA107002;了解！;;;;;;;;;;x
 EVTNAME107003;教学战役;;;;;;;;;;x
-EVTDESC107003;在教学战役中,您会收到类似这枚信息的提示以助于您了解后续如何游玩.您仍可选择自由探索游戏.当您觉得无事可做时,上方的提示有助于您决定如何继续游戏.;;;;;;;;;;x
+EVTDESC107003;在教学战役中，您会收到类似这枚信息的提示以助于您了解后续如何游玩。您仍可选择自由探索游戏。当您觉得无事可做时，上方的提示有助于您决定如何继续游戏。;;;;;;;;;;x
 EVTOPTA107003;了解！;;;;;;;;;;x
 EVTNAME107004;教学战役;;;;;;;;;;x
-EVTDESC107004;根据您的需求,游戏里有多个地图模式可供选择.默认模式是地形. 其他有用的地图模式包括表现独立国度间国界的自由国度模式.尝试探索一下右下角各个地图模式的作用.;;;;;;;;;;x
+EVTDESC107004;根据您的实时操作，游戏里有多个地图模式满足您的需要。默认模式是地形。 另一个有用的地图模式是：展现不同独立国度间国界的自由国度模式。请您尝试探索一下右下角的各个地图模式的作用。;;;;;;;;;;x
 EVTOPTA107004;了解！;;;;;;;;;;x
 EVTNAME107005;教学战役;;;;;;;;;;x
 EVTDESC107005;左上角色的觉得就是您. 点击头像可获得更多关于[Root.GetTitledFirstName]和他家人的信息. 您也可以点击头像旁的徽记来了解您的国度.\n\n点击头像以查看君主以及他家人.注意,您现在单身而继承人是您的弟弟,卡斯提尔国王. 如果您现在就挂彩,就可用身为同一家族的他继续游戏.当然这意味着他会获得列昂王国,一君治二国..;;;;;;;;;;x
@@ -51,11 +51,11 @@ EVTNAME107006;教学战役;;;;;;;;;;x
 EVTDESC107006;在同一窗口下,您可以查看属性和特质.\n\n在同时,角色还可拥有一个代表短期目标的野心. 辛苦达成野心后自然有奖励,比如一些威望或虔诚. 点击"选择野心"按钮,选择一个野心.目前较好的野心也许可以是结婚.;;;;;;;;;;x
 EVTOPTA107006;了解！;;;;;;;;;;x
 EVTNAME107007;教学战役;;;;;;;;;;x
-EVTDESC107007;尽管你的家族有合适的继承人(你的兄弟), 自己生孩子能保障家族有下一世代的继承人.此外, 你的兄弟也许会比你早死. 当你有儿子的时候, 他会成为你的新继承人. 获得合法的子女, 你首先得结婚! 点击你的头像,可以用安排结婚选择合适的配后(两枚金戒指图案的按钮). 你也可以用右下角的角色查找器找到更多合适的角色.;;;;;;;;;;x
+EVTDESC107007;虽然您的家族里有合适的继承人（您的兄弟），但是生下您自己的孩子能保障家族有下一代继承人。此外，您的兄弟也许会早于您去世。当您有儿子的时候，他会成为您的新继承人。要诞生合法的子女，您首先需要结婚！请点击您的头像，可以找到安排婚姻界面（两枚金戒指图案的按钮），您可以在这里选择合适的配偶。您也可以用右下角的角色查找器找到更多合适的角色。;;;;;;;;;;x
 EVTOPTA107007;了解!;;;;;;;;;;x
 EVTTOOLTIP107008;关于如何找到好配后的提示在之后.;;;;;;;;;;x
 EVTNAME107008;教学战役;;;;;;;;;;x
-EVTDESC107008;当寻找配偶时,有几个要点:首先,配偶的属性会提升你自身的, 所以一个优秀的配偶很重要. 第二, 婚姻几乎是唯一获得盟友的机会, 因此尽量同你目标盟友近亲结婚.第三, 你无法同未成年人结婚,但可以定婚约(但这不会得到属性加成). 现在最好还是找一个健康年轻的女子结婚.;;;;;;;;;;x
+EVTDESC107008;当寻找配偶时，有几个要点请您牢记：首先，配偶的属性会提升您自身的属性，所以一个优秀的配偶很重要。第二，联姻是游戏中确保同盟关系的唯一途径，因此请尽量与您想要结盟的统治者的亲近家族联姻。第三，您无法同未成年人结婚，但可以定婚约（虽然这不会带来属性加成。）现在最明智的还是寻找一个健康的、尚在生育年龄的成年女子结婚。;;;;;;;;;;x
 EVTOPTA107008;了解!;;;;;;;;;;x
 EVTNAME107009;教学战役;;;;;;;;;;x
 EVTOPTA107009;了解!;;;;;;;;;;x
@@ -73,7 +73,7 @@ EVTOPTA107103;了解!;;;;;;;;;;x
 EVTNAME107104;教学战役;;;;;;;;;;x
 EVTOPTA107104;了解!;;;;;;;;;;x
 EVTNAME107202;教学战役;;;;;;;;;;x
-EVTDESC107202;哦天啊，看来是不知好歹的农民在萨拉曼卡起义了！你需要拉壮丁来对抗叛军。前往军事窗口，你可以看到一些按钮，通过他们你能够动员你的直辖征召和封臣征召。如果点击这些按钮的同时按着CTRL，你可以避免召集敌人所在省份的征召兵。;;;;;;;;;;x
+EVTDESC107202;哦天啊，看来是不知好歹的农民在萨拉曼卡揭竿而起了！你需要拉壮丁来对抗叛军。前往军事窗口，你可以看到一些按钮，通过他们你能够动员你的直辖征召和封臣征召。如果点击这些按钮的同时按着CTRL，你可以避免召集敌人所在省份的征召兵。;;;;;;;;;;x
 EVTOPTA107202;了解!;;;;;;;;;;x
 EVTNAME107203;教学战役;;;;;;;;;;x
 EVTDESC107203;让部队移动,只需点击盾徽然后右击目标省份. 你可以拖拽鼠标右键选择多个部队. 最好还是在对阵前集结你的部队.;;;;;;;;;;x
@@ -91,7 +91,7 @@ EVTNAME107251;教学战役;;;;;;;;;;x
 EVTDESC107251;现在是扩张你国土的时机. 军事扩张最容易的目标就是周围一圈效果. 但如果你熟悉如何运用舰队, 就让我们选加纳利亚, 一个在西非近海的一省小国.;;;;;;;;;;x
 EVTOPTA107251;了解!;;;;;;;;;;x
 EVTNAME107252;教学战役;;;;;;;;;;x
-EVTDESC107252;在王国风云2中, 宣战需要"正义"的宣战理由. 宣战理由可以是个人对省份的宣称, 或仅仅因为对方信仰不同.;;;;;;;;;;x
+EVTDESC107252;在王国风云II中, 宣战需要"正义"的宣战理由. 宣战理由可以是个人对省份的宣称, 或仅仅因为对方信仰不同.;;;;;;;;;;x
 EVTOPTA107252;了解!;;;;;;;;;;x
 EVTNAME107253;教学战役;;;;;;;;;;x
 EVTDESC107253;宣称可以通过数种方式获得: 首先,你通常继承你父母或兄弟姐妹死后留下的头衔. 因为某些原因(比如战败)失去头衔的君主会获得针对相应领土的宣称. 另外,你也可以伪造宣称.. 鉴于加纳利亚十分遥远, 你无法发起圣战, 必须要伪造一个头衔.;;;;;;;;;;x
@@ -282,7 +282,7 @@ FILTER_NOT_SAME_CUL;不同文化;;;;;;;;;;x
 FILTER_ANY_CUL;任意文化;;;;;;;;;;x
 FILTER_NOT_SAME_CUL_GROUP;不同文化组;;;;;;;;;;x
 irminsul_destroyed;伊尔明索被毁;;;;;;;;;;x
-WIDUKIND_ARMY;萨克森起义;;;;;;;;;;x
+WIDUKIND_ARMY;萨克森叛乱;;;;;;;;;;x
 c_chandax_adj_greek;哥提那;;;;;;;;;;x
 c_chandax_adj_italian;哥提那;;;;;;;;;;x
 TITLE_CREATION_TEMPORARY_TITLE;临时头衔所有者及其封臣不可以创建头衔.;;;;;;;;;;x
@@ -297,7 +297,7 @@ LIEGE_ENDED_WAR_PARTICIPATION_SETUP;领主退出了战争;;;;;;;;;;x
 LIEGE_ENDED_WAR_PARTICIPATION_LOG;§Y$VASSAL$§Y不再是§Y$WAR$§Y的参加者，因为$PRONOUN$领主§Y$LIEGE$§Y作为§Y$SIDE$§Y加入战争。;;;;;;;;;;x
 LIEGE_ENDED_WAR_SETUP;领主结束了战争;;;;;;;;;;x
 LIEGE_ENDED_WAR_LOG;§Y$WAR$§Y结束了，因为 §Y$LIEGE$§Y作为§Y$SIDE$§Y加入战争。;;;;;;;;;;x
-INTERACTION_CANNOT_JOIN_VASSAL_WAR;不能参加附庸的战争(除了十字军或伟大圣战);;;;;;;;;;x
+INTERACTION_CANNOT_JOIN_VASSAL_WAR;不能加入封臣的战争(除了十字军或伟大圣战);;;;;;;;;;x
 EVTTITLE_CM_1021;和谐相处?;;;;;;;;;;x
 EVTDESC_CM_1021;你的母亲前来看望你. 一进来,她便跪在你面前\;;;;;;;;;;x
 EVTOPTA_CM_1021;母亲,我原谅你.;;;;;;;;;;x
@@ -356,7 +356,7 @@ EVTOPTA_CM_502;三呼 [Root.GetTitle] 万岁!;;;;;;;;;;x
 EVTOPTB_CM_502;它将继续延续!;;;;;;;;;;x
 EVTOPTC_CM_502;世间繁华逝如斯;;;;;;;;;;x
 PICK_YOUR_STARTING_ERA;选择开始时期;;;;;;;;;;x
-PICK_STARTING_ERA_TEXT;王国风云2纵跨历史近七百年. 选择一个时间点开始游戏;;;;;;;;;;x
+PICK_STARTING_ERA_TEXT;王国风云II纵跨历史近七百年. 选择一个时间点开始游戏;;;;;;;;;;x
 DARK_AGES;中世纪早期;;;;;;;;;;x
 DARK_AGES_INFO;早期中世纪始于5世纪西罗马的毁灭。这一时期早期伴随着日耳曼和斯拉夫民族跨越欧洲的迁徙。这些民族里包括在南部欧洲定居的哥特人和伦巴第人，在高卢定居的法兰克人，渡海占领不列颠的萨克森人。与此同时，东罗马受到哥特人与阿瓦人的威胁，又与古老的波斯敌人苦战。伊斯兰教的崛起让阿拉伯人横扫中东与北非、征服大量的土地。而在东方的印度，数个大王朝为了曲女城的支配权展开了激烈的竞争，其中包括8世纪末崛起的罗湿陀罗拘陀。而在草原上，可萨人崭露头角；在斯堪的纳维亚，一股撼动世界的力量还未成熟……;;;;;;;;;;x
 VIKING_ERA;维京时代;;;;;;;;;;x
@@ -411,9 +411,9 @@ d_zun_warriors;太阳骑士;;;;;;;;;;x
 d_zun_warriors_adj;尊;;;;;;;;;;x
 job_spiritual_zun_pagan;占卜师;;;;;;;;;;x
 job_spiritual_zun_pagan_reformed;占卜师;;;;;;;;;;x
-zun_pagan;尊日多神教;;;;;;;;;;x
-zun_pagan_reformed;尊日教会;;;;;;;;;;x
-zun_pagan_reformed_adj;尊日教会;;;;;;;;;;x
+zun_pagan;尊日神教;;;;;;;;;;x
+zun_pagan_reformed;尊日教团;;;;;;;;;;x
+zun_pagan_reformed_adj;尊日教团;;;;;;;;;;x
 zun_pagan_DESC;正义使者尊, 是最初由阿富汗的樽比勒王朝崇拜的太阳神. 祂是智慧, 力量, 火焰和光明的化身. 在游戏里的特征定义为:\n§Y*§! 可以对其他原始宗教发动入侵战争\n§Y*§! 传教效率低下且易受非原始宗教影响;;;;;;;;;;x
 zun_pagan_reformed_DESC;尊，太阳神和正义的给予者，是智慧,力量，火焰和驱散黑夜之光的象征。改革后的尊神信仰有一本圣经，描绘了造物传说和教会教条，以及规定了礼拜仪式,正式的决定了教会阶层与祭司长。游戏中的特色：\n§Y*§! 即便没有领土祭司长一直存在\n§Y*§! 祭司长可以发动大圣战;;;;;;;;;;x
 RETTYPE_CUL_SOMALI;索马里散兵;;;;;;;;;;x
@@ -508,7 +508,7 @@ EXPORT_DEL;导出编年史到.txt文件;;;;;;;;;;x
 CONFIRMEXPORTTITLE;将CK2存档导出到EU4;;;;;;;;;;x
 CONFIRMEXPORTTEXT;导出存档至$NAME$.这个过程可能需要几分钟.;;;;;;;;;;x
 CONFIRMEXPORTTEXT_WARNING;导出存档至$NAME$.\n\n 文件名已存在！\n确定继续;;;;;;;;;;x
-CONFIRMCONVERTTITLE;导出王国风云2游戏至欧陆风云4;;;;;;;;;;x
+CONFIRMCONVERTTITLE;导出王国风云II游戏至欧陆风云IV;;;;;;;;;;x
 CONFIRMCONVERTTEXT;这个游戏将会被导出为 $NAME$. 此过程可能花费数分钟.;;;;;;;;;;x
 CONFIRMCONVERTTEXT_WARNING;这个游戏将会被导出为 $NAME$.\n\n 此存档已经存在!\n确定继续?;;;;;;;;;;x
 OPEN_CHRONICLE;开启编年史;;;;;;;;;;x
@@ -536,7 +536,7 @@ b_pooravere;珀拉瓦尔;;;;;;;;;;x
 b_piirsalu;皮尔萨鲁;;;;;;;;;;x
 d_ilmenians;伊尔门尼;;;;;;;;;;x
 d_ilmenians_adj;伊尔门尼;;;;;;;;;;x
-d_zun_pagan_reformed;尊日教会;;;;;;;;;;x
+d_zun_pagan_reformed;尊日教团;;;;;;;;;;x
 temple_baron_zun_pagan;太阳守卫;;;;;;;;;;x
 temple_baron_zun_pagan_reformed;太阳守卫;;;;;;;;;;x
 b_gaujiena;加乌结纳;;;;;;;;;;x
@@ -943,7 +943,7 @@ IS_NOT_MULTIPLAYER;不是多人游戏;;;;;;;;;;x
 other_invasion_succ_tip;§Y[Root.GetTitledFirstName]§!夺取或附庸所有在§Y[This.GetFullBaseName]§!属于§Y[From.GetTitledFirstName]§!的头衔.\n;;;;;;;;;;x
 buddhist_holy_war_desc;§Y$CLAIMANT$§!能用这个宣战口实以夺取§Y$TITLE$§!.;;;;;;;;;;x
 SEARCH;搜索:;;;;;;;;;;x
-EVTDESC_CM_6320;我的[Root.GetLordLady], 有一个除掉[Root.PlotTarget.GetTitledName]的机会出现了. 我们有个办事人员和那人的侍卫十分熟络,能通过那个侍卫进入那人的藏匿地.该动手吗,我的[Root.GetLordLady]?;;;;;;;;;;x
+EVTDESC_CM_6320;我的[Root.GetLordLady]， 有一个除掉[Root.PlotTarget.GetTitledName]的机会出现了。我们有个手下和那人的侍卫打好了关系，可以借机进入那人的藏身之地。该动手吗，我的[Root.GetLordLady]？;;;;;;;;;;x
 EVTOPTA_CM_6320;收买那侍卫去干掉[Root.PlotTarget.GetTitledFirstName].;;;;;;;;;;x
 EVTOPTB_CM_6320;尝试买通他更多侍卫.;;;;;;;;;;x
 EVTOPTC_CM_6320;我们应该等等.;;;;;;;;;;x
