--- a/localisation/v2_20d.csv
+++ b/localisation/v2_20d.csv
@@ -9,10 +9,10 @@ not_under_attack;非防御方;;;;;;;;;;x
 temple_king_pagan_group;王室牧师;;;;;;;;;;x
 EVTTITLE_CM_1402;反叛[From.PrimaryTitle.GetRulerTitle];;;;;;;;;;x
 EVTDESC_CM_1410;我的[Root.GetLordLady], 叛徒[From.GetTitledName]撕毁了 [From.GetHerHis]诺言,拒绝支援你反抗倭马亚王朝!;;;;;;;;;;x
-TRIBAL_VASSAL_LEVY_CONTROL_ON;附庸部落将会向你提供常备军.\n;;;;;;;;;;x
-TRIBAL_VASSAL_LEVY_CONTROL_OFF;附庸部落将会停止向你提供常备军.\n;;;;;;;;;;x
-TRIBAL_VASSAL_TAX_INCOME_ON;附庸部落将会向你上缴税金.\n;;;;;;;;;;x
-TRIBAL_VASSAL_TAX_INCOME_OFF;附庸部落将会停止向你上缴税金.\n;;;;;;;;;;x
+TRIBAL_VASSAL_LEVY_CONTROL_ON;部落封臣将会向你提供常备军.\n;;;;;;;;;;x
+TRIBAL_VASSAL_LEVY_CONTROL_OFF;部落封臣将会停止向你提供常备军.\n;;;;;;;;;;x
+TRIBAL_VASSAL_TAX_INCOME_ON;部落封臣将会向你上缴税金.\n;;;;;;;;;;x
+TRIBAL_VASSAL_TAX_INCOME_OFF;部落封臣将会停止向你上缴税金.\n;;;;;;;;;;x
 LIEGE_TAX_TRIBAL;独立的部落或游牧领主不会从他们的封臣那收到税金;;;;;;;;;;x
 CHRONICLE_WAR_WON;[From.GetTitledNameWithNick] 在战争中击败了 [Root.GetTitledNameWithNick].;;;;;;;;;;x
 CHRONICLE_WAR_WHITEPEACE;[From.GetTitledNameWithNick] 与 [Root.GetTitledNameWithNick]媾和.;;;;;;;;;;x
