--- a/localisation/v2_62.csv
+++ b/localisation/v2_62.csv
@@ -391,7 +391,7 @@ RULE_NON_EPIDEMIC_DISEASES_MORE_DESC;非传染性疾病的案例增多。;;;;;;;
 RULE_NON_EPIDEMIC_DISEASES_FEWER_DESC;非传染性疾病的案例减少。;;;;;;;;;;x
 RULE_NON_EPIDEMIC_DISEASES_RARE_DESC;非传染性疾病的案例非常罕见。;;;;;;;;;;x
 RULE_NON_EPIDEMIC_DISEASES_NONE_DESC;非传染性疾病的案例完全不会产生。;;;;;;;;;;x
-RULE_PROVINCIAL_REVOLT_STRENGTH;§B上古众神：§!省份叛乱力量;;;;;;;;;;x
+RULE_PROVINCIAL_REVOLT_STRENGTH;§B逝往神灵:§! 省份叛乱力量;;;;;;;;;;x
 RULE_PROVINCIAL_REVOLT_STRENGTH_DEFAULT_DESC;省份叛乱力量为默认水平。;;;;;;;;;;x
 RULE_PROVINCIAL_REVOLT_STRENGTH_POWERFUL_DESC;省份叛乱强而有力。他们的军队是默认水平的两倍。;;;;;;;;;;x
 RULE_PROVINCIAL_REVOLT_STRENGTH_VERY_POWERFUL_DESC;省份叛乱非常强大。他们的军队是默认水平的四倍。;;;;;;;;;;x
@@ -425,7 +425,7 @@ EVTDESC_TOG_7112;佩伦管理尘世之时，智慧而狡黠的维列斯则统御
 EVTDESC_TOG_7113;生育之神亚利洛是佩伦之子，他与莫拉娜生于除夕之夜，但亚利洛随后被维列斯从摇篮中抢走，在地府当做自己的儿子养大。亚利洛回到尘世时带回了温暖与丰饶，从此有了春天。;;;;;;;;;;x
 EVTDESC_TOG_7114;死亡与重生之女神莫拉娜是一位强大而有报复心的女神。当她的兄长和丈夫亚利洛欺骗她时，她就杀掉他。世界因此枯萎冰冻，因而有了冬天。莫拉娜有许多秘密和咒文，授予最虔诚的信徒。;;;;;;;;;;x
 EVTOPTA_TOG_7111;我希望能证明自己是合格的信徒。;;;;;;;;;;x
-EVTDESC_TOG_7200;有很多神供你选择敬拜。是慈母般的叶玛亚，水与生育之神？还是骗子埃克文苏，他擅长谈判与协议？需要知识就寻求智者欧伦米拉，需求战争中的好运就向桑戈祈祷。;;;;;;;;;;x
+EVTDESC_TOG_7200;有诸多神明可供你选择去追随。是慈母般的叶玛亚，水与生育之神？还是骗子埃克文苏，通晓谈判与交涉之神？寻求知识可以投向圣者欧伦米拉，而武运则会赐予那些向桑戈祈祷的人。;;;;;;;;;;x
 EVTOPTA_TOG_7200;我选择叶玛亚。愿慈母保护我。;;;;;;;;;;x
 EVTOPTB_TOG_7200;埃克文苏保佑我获得超乎想象的财富。;;;;;;;;;;x
 EVTOPTC_TOG_7200;我将献祷于伟大的欧伦米拉，真理的持有者。;;;;;;;;;;x
