--- a/localisation/v2_81.csv
+++ b/localisation/v2_81.csv
@@ -7,9 +7,9 @@ kow_tow_travels_death;在前往中华帝国的旅途中;;;;;;;;;;x
 EVT_DESC_JD_60314;[From.Offmap.Ruler.GetChineseComplimentAdjective] [From.Offmap.Ruler.GetTitle]的[From.GetTitle]向[Root.PrimaryTitle.GetFullName]的[Root.GetTitle]寄了封信。\n\n你辜负了[From.Offmap.Ruler.GetLongChineseEmperorName]的天恩。我们知道[FromFrom.GetChineseCharacterRole] [FromFrom.GetTitledName]的死是由你一手造成。不要以为[From.Offmap.Ruler.GetTitle]会轻饶此事。;;;;;;;;;;x
 hostages_random_imprisonment_tt;你将随机逮捕目标的一名§Y近亲§!。;;;;;;;;;;x
 NOT_PACIFIED_BY_LIEGE_DATELESS;未被领主要求和平;;;;;;;;;;x
-RULES_ACHIEVEMENT_REQUIRE_NO_RULER_DESIGNER;不可使用§Y角色设计器§!;;;;;;;;;;x
-IRONMAN_MODE_RULER_DESIGNER_DESC;角色设计器开启，成就不可用。;;;;;;;;;;x
-REQUIREMENTS_HEADER;§Y要求§!:;;;;;;;;;;x
+RULES_ACHIEVEMENT_REQUIRE_NO_RULER_DESIGNER;不可使用§Y人物设计器§!;;;;;;;;;;x
+IRONMAN_MODE_RULER_DESIGNER_DESC;已启用人物设计器，成就不可用。;;;;;;;;;;x
+REQUIREMENTS_HEADER;§Y要求§!：;;;;;;;;;;x
 OLD_SAVE_WARNING;§Y这是一个旧存档，加载它或会导致各种问题§!;;;;;;;;;;x
 TRADE_ROUTE_GLOBAL_VALUE_CHANGED;外部因素使这个贸易路线的贸易价值增加$VALUE|+0%$.;;;;;;;;;;x
 NOT_ALLOWED_TO_PLAY_SAME_CHARACTER;你不能同其他玩家使用同一角色;;;;;;;;;;x
